<resources>
    <string name="app_name">UTS Pemrograman Mobile</string>
    <string name="nama_fakultas">nama_fakultas</string>
    <string name="descripsi">descripsi</string>
    <string name="descripsi_singkat">descripsi_singkat</string>
    <string name="profile_upn">profile_upn</string>
    <string name="email">email</string>
    <string name="mocgam99_gmail_com">zalrizal040416_gmail_com</string>
    <string name="zalrizal040416_gmail_com">zalrizal040416_gmail_com</string>
    <string name="website">website</string>
    <string name="https_www_google_com">google</string>
</resources>
